--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "joisarjignesh/bigbluebutton": "master",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "staudenmeir/belongs-to-through": "^2.5",
+        "yajra/laravel-datatables": "^1.5"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
