--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,11 @@
         "laravel/homestead": "^10.8",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "phpunit/phpunit": "^8.5",
+        "friendsofphp/php-cs-fixer": "2.*",
+        "squizlabs/php_codesniffer": "3.*",
+        "php-coveralls/php-coveralls": "~2.2.0",
+        "brainmaestro/composer-git-hooks": "^2.8"
     },
     "config": {
         "optimize-autoloader": true,
@@ -36,6 +40,16 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        },
+        "hooks": {
+            "pre-commit": [
+                "vendor/bin/php-cs-fixer fix --dry-run --allow-risky=yes"
+            ],
+            "pre-push": [
+                "vendor/bin/phpunit"
+            ],
+            "post-merge": "composer install",
+            "post-checkout": "composer install"
         }
     },
     "autoload": {
@@ -64,7 +78,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "test": "vendor/bin/phpunit",
+        "post-install-cmd": "vendor/bin/cghooks add --ignore-lock",
+        "post-update-cmd": "vendor/bin/cghooks update"
     },
     "repositories":[
         {
