--- a/.github/workflows/phpfixer.yml
+++ b/.github/workflows/phpfixer.yml
@@ -3,7 +3,7 @@ name: CS-Fixer
 jobs:
   php-cs-fixer:
     name: PHP-CS-Fixer
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
     - name: PHP-CS-Fixer
