--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Laravel
+name: CI
 
 on:
   push:
@@ -30,3 +30,5 @@ jobs:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
+    - name: Execute code style check via php-cs-fixer
+      run: vendor/bin/php-cs-fixer fix --dry-run --allow-risky=yes
