--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@fortawesome/fontawesome-free": "^5.13.0",
         "@simonwep/pickr": "^1.5.1",
         "bootstrap-select": "^1.13.16",
-        "vue-router": "^3.2.0"
+        "es6-promise": "^4.2.8",
+        "vue-router": "^3.2.0",
+        "vuex": "^3.4.0"
     }
 }
