--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist && yarn install
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist && npm install
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
