Add vue extension to eslint check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,4 @@ jobs:
     - name: Execute code style check via php-cs-fixer
       run: vendor/bin/php-cs-fixer fix --dry-run --allow-risky=yes
     - name: Execute frontend code style check via eslint
-      run: ./node_modules/.bin/eslint .
+      run: ./node_modules/.bin/eslint --ext .js,.vue .
