Implement login functionality

--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,6 @@ LDAP_BASE_DN="dc=local,dc=com"
 LDAP_TIMEOUT=5
 LDAP_SSL=false
 LDAP_TLS=false
+
+SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
+SESSION_DOMAIN=localhost,127.0.0.1
