Add node version required by eslint

--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
         "es6-promise": "^4.2.8",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
+    },
+    "engines": {
+        "node": "^10.12.0 || >=12.0.0"
     }
 }
