--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
     },
+    "engineStrict" : true,
     "engines": {
         "node": "^10.12.0 || >=12.0.0"
     }
