--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,6 @@ jobs:
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Change Node version
-      run: ~/.nvm/nvm.sh use
-    - name: Install Frontend Dependencies
-      run: npm install
     - name: Generate key
       run: php artisan key:generate
     - name: Directory Permissions
@@ -35,4 +31,8 @@ jobs:
     - name: Execute code style check via php-cs-fixer
       run: vendor/bin/php-cs-fixer fix --dry-run --allow-risky=yes
     - name: Execute frontend code style check via eslint
-      run: ./node_modules/.bin/eslint --ext .js,.vue .
+      run: |
+        source ~/.nvm/nvm.sh
+        nvm use
+        npm install
+        ./node_modules/.bin/eslint --ext .js,.vue .
