--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "bootstrap-select": "^1.13.16",
         "bootstrap-vue": "^2.15.0",
         "es6-promise": "^4.2.8",
+        "vue-i18n": "^8.18.1",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
     },
