--- a/composer.json
+++ b/composer.json
@@ -44,11 +44,10 @@
         },
         "hooks": {
             "pre-commit": [
-                "vendor/bin/php-cs-fixer fix --dry-run --allow-risky=yes",
-                "./node_modules/.bin/eslint --ext .js,.vue ."
+                "php-cs-fixer fix --allow-risky=yes"
             ],
             "pre-push": [
-                "vendor/bin/phpunit"
+                "phpunit"
             ],
             "post-merge": "composer install",
             "post-checkout": "composer install"
@@ -82,8 +81,11 @@
             "@php artisan key:generate --ansi"
         ],
         "test": "vendor/bin/phpunit",
-        "post-install-cmd": "vendor/bin/cghooks add --ignore-lock",
-        "post-update-cmd": "vendor/bin/cghooks update"
+        "fix-cs": [
+            "php-cs-fixer fix --allow-risky=yes"
+        ],
+        "post-install-cmd": "cghooks add --ignore-lock",
+        "post-update-cmd": "cghooks update"
     },
     "repositories":[
         {
