--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "lint": "eslint --fix --ext .js,.vue ."
     },
+    "pre-commit": [
+        "lint"
+    ],
     "devDependencies": {
         "axios": "^0.19.2",
         "bootstrap": "^4.5.0",
@@ -28,7 +32,8 @@
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "pre-commit": "^1.1.3"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
