Added locales and possibility to customize locales

--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,5 @@ LDAP_TLS=false
 
 SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
 SESSION_DOMAIN=localhost,127.0.0.1
+
+MIX_AVAILABLE_LOCALES=en,es,de
