--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "devDependencies": {
         "axios": "^0.19.2",
         "bootstrap": "^4.5.0",
+        "browser-sync": "^2.26.7",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
         "eslint": "^7.1.0",
         "eslint-config-standard": "^14.1.1",
