--- a/package.json
+++ b/package.json
@@ -8,25 +8,35 @@
         "watch-poll": "npm run development -- --watch --watch-poll & npm run development-css -- --watch --watch-poll",
         "prod": "npm run production && npm run production-css",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "production-css": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --env.mixfile=webpack.css.mix.js --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production-css": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --env.mixfile=webpack.css.mix.js --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "test": "mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js tests/Frontend/**/*.spec.js",
+        "lint": "./node_modules/.bin/eslint --ext .js,.vue .",
+        "ci": "npm run lint && npm run test"
     },
     "devDependencies": {
+        "@intlify/eslint-plugin-vue-i18n": "^0.4.1",
+        "@vue/test-utils": "^1.0.3",
         "axios": "^0.19.2",
         "bootstrap": "^4.5.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
-        "eslint": "^7.1.0",
+        "eslint": "^7.3.1",
         "eslint-config-standard": "^14.1.1",
-        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-import": "^2.22.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
         "eslint-plugin-vue": "^6.2.2",
         "glob": "^7.1.6",
         "jquery": "^3.2",
+        "jsdom": "^16.2.2",
+        "jsdom-global": "^3.0.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
+        "mocha": "^7.2.0",
+        "mochapack": "^2.0.2",
+        "moxios": "^0.4.0",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
@@ -36,7 +46,6 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
-        "@intlify/eslint-plugin-vue-i18n": "^0.4.1",
         "@simonwep/pickr": "^1.5.1",
         "bootstrap-select": "^1.13.16",
         "bootstrap-vue": "^2.15.0",
