--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
         "eslint-plugin-vue": "^6.2.2",
+        "expect": "^26.1.0",
         "glob": "^7.1.6",
         "jquery": "^3.2",
         "jsdom": "^16.2.2",
