Add locale selector to page

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "prod": "npm run production && npm run production-css",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "production-css": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --env.mixfile=webpack.css.mix.js --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "test": "mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js tests/Frontend/**/*.spec.js",
+        "test": "NODE_ENV=test mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js \"tests/Frontend/**/*.spec.js\"",
         "lint": "./node_modules/.bin/eslint --ext .js,.vue .",
         "ci": "npm run lint && npm run test"
     },
@@ -17,6 +17,7 @@
         "@intlify/eslint-plugin-vue-i18n": "^0.4.1",
         "@vue/test-utils": "^1.0.3",
         "axios": "^0.19.2",
+        "babel-plugin-rewire": "^1.2.0",
         "bootstrap": "^4.5.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
@@ -24,6 +25,7 @@
         "eslint": "^7.3.1",
         "eslint-config-standard": "^14.1.1",
         "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-mocha": "^7.0.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
