--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
         "@simonwep/pickr": "^1.5.1",
+        "@smartweb/vue-flash-message": "^0.6.4",
         "bootstrap-select": "^1.13.16",
         "bootstrap-vue": "^2.15.0",
         "es6-promise": "^4.2.8",
