--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "bootstrap-vue": "^2.15.0",
         "es6-promise": "^4.2.8",
         "laravel-mix-merge-manifest": "^0.1.2",
+        "vue-cookie-law": "^1.13.3",
         "vue-i18n": "^8.18.2",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
