--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,6 @@ SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
 SESSION_DOMAIN=localhost,127.0.0.1
 
 MIX_AVAILABLE_LOCALES=en,es,de
+
+LDAP_ROLE_ATTRIBUTE=userclass
+LDAP_ROLE_MAP=admin=admin,user=user
