--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
+        "dev": "npm run development && npm run development-css",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run development -- --watch --watch-poll",
-        "prod": "npm run production",
+        "development-css": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --env.mixfile=webpack.css.mix.js --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "npm run development -- --watch & npm run development-css -- --watch",
+        "watch-poll": "npm run development -- --watch --watch-poll & npm run development-css -- --watch --watch-poll",
+        "prod": "npm run production && npm run production-css",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "production-css": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --env.mixfile=webpack.css.mix.js --config=node_modules/laravel-mix/setup/webpack.config.js",
         "test": "NODE_ENV=test mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js \"tests/Frontend/**/*.spec.js\"",
         "lint": "./node_modules/.bin/eslint --ext .js,.vue .",
         "ci": "npm run lint && npm run test"
@@ -34,7 +36,7 @@
         "jsdom": "^16.2.2",
         "jsdom-global": "^3.0.2",
         "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.19",
+        "lodash": "^4.17.13",
         "mocha": "^7.2.0",
         "mochapack": "^2.0.2",
         "moxios": "^0.4.0",
@@ -52,6 +54,7 @@
         "bootstrap-select": "^1.13.16",
         "bootstrap-vue": "^2.15.0",
         "es6-promise": "^4.2.8",
+        "laravel-mix-merge-manifest": "^0.1.2",
         "vue-i18n": "^8.18.2",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
