--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "bensampo/laravel-enum": "^2.0",
         "caouecs/laravel-lang": "~6.0",
         "directorytree/ldaprecord-laravel": "^1.3",
         "fideloper/proxy": "^4.2",
