--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "es6-promise": "^4.2.8",
         "v-clipboard": "^2.2.3",
         "vue-i18n": "^8.18.1",
+        "vue-multiselect": "^2.1.6",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
     },
