Fix webpack build and import languages static
Due to static import a default locale can be set by a env variable

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,4 @@ SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
 SESSION_DOMAIN=localhost,127.0.0.1
 
 MIX_AVAILABLE_LOCALES=en,es,de
+MIX_DEFAULT_LOCALE=en
