Make setting of default locale possible

--- a/.env.example
+++ b/.env.example
@@ -59,5 +59,6 @@ LDAP_TLS=false
 SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
 SESSION_DOMAIN=localhost,127.0.0.1
 
+# Don't forget to rebuild frontend on changing this environment variables
 MIX_AVAILABLE_LOCALES=en,es,de
 MIX_DEFAULT_LOCALE=en
