--- a/composer.json
+++ b/composer.json
@@ -84,6 +84,8 @@
             "@php artisan key:generate --ansi"
         ],
         "test": "vendor/bin/phpunit",
+        "post-install-cmd": "cghooks add --ignore-lock",
+        "post-update-cmd": "cghooks update",
         "fix-cs": [
             "php-cs-fixer fix --allow-risky=yes"
         ]
