--- a/composer.json
+++ b/composer.json
@@ -47,10 +47,10 @@
         },
         "hooks": {
             "pre-commit": [
-                "php-cs-fixer fix --allow-risky=yes && npm run ci"
+                "vendor/bin/php-cs-fixer fix --allow-risky=yes && npm run ci"
             ],
             "pre-push": [
-                "phpunit"
+                "vendor/bin/phpunit"
             ],
             "post-merge": "composer install",
             "post-checkout": "composer install"
@@ -84,10 +84,10 @@
             "@php artisan key:generate --ansi"
         ],
         "test": "vendor/bin/phpunit",
-        "post-install-cmd": "cghooks add --ignore-lock",
-        "post-update-cmd": "cghooks update",
+        "post-install-cmd": "vendor/bin/cghooks add --ignore-lock",
+        "post-update-cmd": "vendor/bin/cghooks update",
         "fix-cs": [
-            "php-cs-fixer fix --allow-risky=yes"
+            "vendor/bin/php-cs-fixer fix --allow-risky=yes"
         ]
     },
     "repositories":[
