--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: ['7.2', '7.3', '7.4']
+        php-versions: ['7.3', '7.4']
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -20,7 +20,7 @@ jobs:
       uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
       with:
         php-version: ${{ matrix.php-versions }}
-        extensions: mbstring, dom, fileinfo
+        extensions: mbstring, dom, fileinfo, ldap
         coverage: xdebug #optional
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
