fix CODECOV_TOKEN env

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,6 @@ jobs:
         npm run ci
     - name: Upload coverage
       env:
-        CODECOV_TOKEN: ${{ secrets.SuperSecret }}
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       run: bash <(curl -s https://codecov.io/bash)
       if: matrix.php-versions == '7.3'
