--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "axios": "^0.19.2",
         "babel-plugin-rewire": "^1.2.0",
         "bootstrap": "^4.5.0",
-        "browser-sync": "^2.26.7",
+        "browser-sync": "^2.26.12",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
         "eslint": "^7.3.1",
@@ -45,24 +45,24 @@
         "moxios": "^0.4.0",
         "popper.js": "^1.12",
         "pre-commit": "^1.1.3",
+        "prettier": "^2.0.5",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10",
-        "prettier": "^2.0.5"
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
         "@simonwep/pickr": "^1.5.1",
         "@smartweb/vue-flash-message": "^0.6.4",
+        "awesome-mask": "^1.1.1",
         "bootstrap-select": "^1.13.16",
         "bootstrap-vue": "^2.15.0",
         "es6-promise": "^4.2.8",
         "laravel-mix-merge-manifest": "^0.1.2",
-        "vue-i18n": "^8.18.2",
-        "awesome-mask": "^1.1.1",
         "v-clipboard": "^2.2.3",
+        "vue-i18n": "^8.18.2",
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
