--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
     "env": {
         "test": {
-            "plugins": ["rewire"]
+            "plugins": ["rewire", "istanbul"]
         }
     }
 }
