--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
         "prod": "npm run production && npm run production-css",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "production-css": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --env.mixfile=webpack.css.mix.js --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "test": "NODE_ENV=test mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js \"tests/Frontend/**/*.spec.js\"",
+        "test": "cross-env NODE_ENV=test mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js \"resources/js/**/*.vue\" \"tests/Frontend/**/*.spec.js\"",
         "lint": "./node_modules/.bin/eslint --ext .js,.vue .",
-        "ci": "npm run lint && npm run test"
+        "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm run test",
+        "ci": "npm run lint && npm run cover"
     },
     "devDependencies": {
         "@intlify/eslint-plugin-vue-i18n": "^0.4.1",
         "@vue/test-utils": "^1.0.3",
         "axios": "^0.19.2",
+        "babel-plugin-istanbul": "^6.0.0",
         "babel-plugin-rewire": "^1.2.0",
         "bootstrap": "^4.5.0",
-        "browser-sync": "^2.26.7",
+        "browser-sync": "^2.26.12",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
         "eslint": "^7.3.1",
@@ -40,6 +42,7 @@
         "mocha": "^7.2.0",
         "mochapack": "^2.0.2",
         "moxios": "^0.4.0",
+        "nyc": "^15.1.0",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
@@ -61,5 +64,20 @@
     },
     "engines": {
         "node": "^10.12.0 || >=12.0.0"
+    },
+    "nyc": {
+        "include": [
+            "resources/js/**/*.{js,vue}"
+        ],
+        "extension": [
+            ".js",
+            ".vue"
+        ],
+        "exclude": [
+            "resources/js/lang/**/*.js"
+        ],
+        "instrument": true,
+        "sourceMap": false,
+        "all": true
     }
 }
