--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "sinon": "^9.0.2",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
