--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,5 @@ SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
 SESSION_DOMAIN=localhost,127.0.0.1
 
 MIX_AVAILABLE_LOCALES=en,es,de
+MIX_WELCOME_MESSAGE_LIMIT=500
+MIX_ROOM_NAME_LIMIT=50
