--- a/composer.json
+++ b/composer.json
@@ -47,10 +47,10 @@
         },
         "hooks": {
             "pre-commit": [
-                "vendor/bin/php-cs-fixer fix --allow-risky=yes"
+                "php-cs-fixer fix --allow-risky=yes"
             ],
             "pre-push": [
-                "vendor/bin/phpunit"
+                "phpunit"
             ],
             "post-merge": "composer install",
             "post-checkout": "composer install"
@@ -83,11 +83,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "test": "vendor/bin/phpunit",
-        "post-install-cmd": "vendor/bin/cghooks add --ignore-lock",
-        "post-update-cmd": "vendor/bin/cghooks update",
+        "test": "phpunit",
+        "post-install-cmd": "cghooks add --ignore-lock",
+        "post-update-cmd": "cghooks update",
         "fix-cs": [
-            "vendor/bin/php-cs-fixer fix --allow-risky=yes"
+            "php-cs-fixer fix --allow-risky=yes"
         ]
     }
 }
