--- a/composer.json
+++ b/composer.json
@@ -47,10 +47,10 @@
         },
         "hooks": {
             "pre-commit": [
-                "php-cs-fixer fix --allow-risky=yes"
+                "composer run fix-cs"
             ],
             "pre-push": [
-                "phpunit"
+                "composer run test"
             ],
             "post-merge": "composer install",
             "post-checkout": "composer install"
@@ -86,8 +86,7 @@
         "test": "phpunit",
         "post-install-cmd": "cghooks add --ignore-lock",
         "post-update-cmd": "cghooks update",
-        "fix-cs": [
-            "php-cs-fixer fix --allow-risky=yes"
-        ]
+        "fix-cs": "php-cs-fixer fix --allow-risky=yes"
+
     }
 }
