--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-axe": "^2.4.0",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "sinon": "^9.0.3"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
