--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
         "sinon": "^9.0.2",
         "vue": "^2.5.17",
         "vue-axe": "^2.4.0",
-        "sinon": "^9.0.3"
+        "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.13.0",
@@ -65,7 +65,6 @@
         "bootstrap-select": "^1.13.16",
         "bootstrap-vue": "^2.15.0",
         "es6-promise": "^4.2.8",
-        "laravel-mix-merge-manifest": "^0.1.2",
         "v-clipboard": "^2.2.3",
         "vue-i18n": "^8.18.2",
         "vue-multiselect": "^2.1.6",
