--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,6 @@ LDAP_ROLE_MAP=admin=admin,user=user
 BROWSERSYNC_URL=localhost
 MIX_WELCOME_MESSAGE_LIMIT=500
 MIX_ROOM_NAME_LIMIT=50
+
+DEFAULT_LOGO=/images/logo.svg
+DEFAULT_ROOM_LIMIT=-1
