--- a/.env.travis
+++ b/.env.travis
@@ -60,7 +60,7 @@ SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
 SESSION_DOMAIN=localhost,127.0.0.1
 
 # Don't forget to rebuild frontend on changing this environment variables
-MIX_AVAILABLE_LOCALES=en,es,de
+MIX_AVAILABLE_LOCALES=en,de
 MIX_DEFAULT_LOCALE=en
 
 LDAP_ROLE_ATTRIBUTE=userclass
