Removed LdapController, Tests, CrudLdapModalComponent, Added Policies for User and Invitation, Updated Tests for UserController and InvitationController, Updated Frontend tests, Updated roles and permissions seeder for admin

--- a/.env.example
+++ b/.env.example
@@ -70,5 +70,7 @@ BROWSERSYNC_URL=localhost
 MIX_WELCOME_MESSAGE_LIMIT=500
 MIX_ROOM_NAME_LIMIT=50
 
+DEFAULT_LOGO=/images/logo.svg
+
 MIX_PAGINATION_PAGE_SIZE=10
 MIX_PAGINATION_INDEX_LIMIT=3
