--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,7 @@ MIX_WELCOME_MESSAGE_LIMIT=500
 MIX_ROOM_NAME_LIMIT=50
 
 DEFAULT_LOGO=/images/logo.svg
+DEFAULT_ROOM_LIMIT=-1
 DEFAULT_OPEN_REGISTRATION=true # Define whether registration for all users or invitation only
 
 MIX_PAGINATION_PAGE_SIZE=10
