Refactor code to be more DRY, updated migrations, removed momentjs, updated changelog, removed ldap route, updated settings

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
+MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
@@ -73,6 +73,6 @@ MIX_ROOM_NAME_LIMIT=50
 DEFAULT_LOGO=/images/logo.svg
 DEFAULT_ROOM_LIMIT=-1
 DEFAULT_OPEN_REGISTRATION=true # Define whether registration for all users or invitation only
+DEFAULT_PAGINATION_PAGE_SIZE=10
 
-MIX_PAGINATION_PAGE_SIZE=10
 MIX_PAGINATION_INDEX_LIMIT=3
