--- a/.env.travis
+++ b/.env.travis
@@ -72,3 +72,7 @@ MIX_ROOM_NAME_LIMIT=50
 
 DEFAULT_LOGO=/images/logo.svg
 DEFAULT_ROOM_LIMIT=-1
+DEFAULT_OPEN_REGISTRATION=true
+DEFAULT_PAGINATION_PAGE_SIZE=10
+
+MIX_PAGINATION_INDEX_LIMIT=3
