--- a/.env.travis
+++ b/.env.travis
@@ -74,5 +74,6 @@ DEFAULT_LOGO=/images/logo.svg
 DEFAULT_ROOM_LIMIT=-1
 DEFAULT_OPEN_REGISTRATION=true
 DEFAULT_PAGINATION_PAGE_SIZE=10
+DEFAULT_INVITATION_TOKEN_EXPIRATION=15
 
 MIX_PAGINATION_INDEX_LIMIT=3
