--- a/.env.example
+++ b/.env.example
@@ -72,4 +72,4 @@ MIX_ROOM_NAME_LIMIT=50
 
 DEFAULT_LOGO=/images/logo.svg
 DEFAULT_ROOM_LIMIT=-1
-DEFAULT_PAGE_SIZE=15
+DEFAULT_PAGINATION_PAGE_SIZE=15
