--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@fortawesome/fontawesome-free": "^5.13.0",
         "@simonwep/pickr": "^1.5.1",
         "@smartweb/vue-flash-message": "^0.6.4",
+        "array-flat-polyfill": "^1.0.1",
         "awesome-mask": "^1.1.1",
         "bootstrap-select": "^1.13.16",
         "bootstrap-vue": "^2.15.0",
