--- a/.env.example
+++ b/.env.example
@@ -74,3 +74,4 @@ DEFAULT_LOGO=/images/logo.svg
 DEFAULT_ROOM_LIMIT=-1
 DEFAULT_PAGINATION_PAGE_SIZE=15
 OWN_ROOMS_PAGINATION_PAGE_SIZE=5
+LOG_ATTENDANCE=false
