--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "vue-i18n": "^8.18.2",
         "vue-multiselect": "^2.1.6",
         "vue-router": "^3.2.0",
+        "vue-swatches": "^2.1.0",
         "vuex": "^3.4.0"
     },
     "engines": {
