Github comments, add favicon

--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,7 @@ MIX_WELCOME_MESSAGE_LIMIT=500
 MIX_ROOM_NAME_LIMIT=50
 
 DEFAULT_LOGO=/images/logo.svg
+DEFAULT_FAVICON=/images/favicon.ico
 DEFAULT_ROOM_LIMIT=-1
 DEFAULT_PAGINATION_PAGE_SIZE=15
 OWN_ROOMS_PAGINATION_PAGE_SIZE=5
