--- a/.env.ci
+++ b/.env.ci
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=testing
-DB_USERNAME=travis
-DB_PASSWORD=
+DB_DATABASE=test
+DB_USERNAME=user
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
