--- a/composer.json
+++ b/composer.json
@@ -9,21 +9,21 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "ext-json": "*",
         "anlutro/l4-settings": "^0.11.3",
         "bensampo/laravel-enum": "^2.0",
-        "caouecs/laravel-lang": "~6.0",
         "directorytree/ldaprecord-laravel": "^1.3",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "goldspecdigital/laravel-eloquent-uuid": "7.0",
         "guzzlehttp/guzzle": "^6.3",
+        "laravel-lang/lang": "~6.1",
         "laravel/framework": "^7.0",
         "laravel/sanctum": "^2.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "littleredbutton/bigbluebutton-api-php": "^3.2.0",
-        "ext-json": "*"
+        "littleredbutton/bigbluebutton-api-php": "^3.2.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
