--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,7 @@ DEFAULT_ROOM_LIMIT=-1
 DEFAULT_PAGINATION_PAGE_SIZE=15
 OWN_ROOMS_PAGINATION_PAGE_SIZE=5
 LOG_ATTENDANCE=false
+PASSWORD_SELF_RESET_ENABLED=false
+
+# Enable axe accessibility check tools, only considered in development
+ENABLE_AXE=false
