--- a/.env.example
+++ b/.env.example
@@ -76,7 +76,12 @@ DEFAULT_ROOM_LIMIT=-1
 DEFAULT_PAGINATION_PAGE_SIZE=15
 OWN_ROOMS_PAGINATION_PAGE_SIZE=5
 LOG_ATTENDANCE=false
+
 PASSWORD_SELF_RESET_ENABLED=false
+PASSWORD_RESET_EXPIRE=60
+PASSWORD_RESET_THROTTLE=60
+NEW_USER_PASSWORD_RESET_EXPIRE=60
+NEW_USER_PASSWORD_RESET_THROTTLE=60
 
 # Enable axe accessibility check tools, only considered in development
 ENABLE_AXE=false
