Add default timezone

--- a/.env.example
+++ b/.env.example
@@ -82,6 +82,7 @@ PASSWORD_RESET_EXPIRE=60
 PASSWORD_RESET_THROTTLE=60
 NEW_USER_PASSWORD_RESET_EXPIRE=60
 NEW_USER_PASSWORD_RESET_THROTTLE=60
+DEFAULT_TIMEZONE=UTC
 
 # Enable axe accessibility check tools, only considered in development
 ENABLE_AXE=false
