--- a/.env.example
+++ b/.env.example
@@ -45,7 +45,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-LDAP_LOGGING=true
 LDAP_CONNECTION=default
 LDAP_HOST=127.0.0.1
 LDAP_USERNAME="cn=user,dc=local,dc=om"
@@ -76,3 +75,7 @@ DEFAULT_ROOM_LIMIT=-1
 DEFAULT_PAGINATION_PAGE_SIZE=15
 OWN_ROOMS_PAGINATION_PAGE_SIZE=5
 LOG_ATTENDANCE=false
+
+AUTH_LOG_SUCCESSFUL=false
+AUTH_LOG_FAILED=false
+AUTH_LOG_LDAP_ROLES=false
