--- a/composer.json
+++ b/composer.json
@@ -27,16 +27,17 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
+        "brainmaestro/composer-git-hooks": "^2.8",
         "facade/ignition": "^2.0",
+        "friendsofphp/php-cs-fixer": "2.*",
         "fzaninotto/faker": "^1.9.1",
         "laravel/homestead": "^10.8",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5",
-        "friendsofphp/php-cs-fixer": "2.*",
-        "squizlabs/php_codesniffer": "3.*",
         "php-coveralls/php-coveralls": "~2.2.0",
-        "brainmaestro/composer-git-hooks": "^2.8"
+        "phpunit/phpunit": "^8.5",
+        "squizlabs/php_codesniffer": "3.*",
+        "timacdonald/log-fake": "^1.9"
     },
     "config": {
         "optimize-autoloader": true,
