--- a/package.json
+++ b/package.json
@@ -66,9 +66,9 @@
         "awesome-mask": "^1.1.1",
         "bootstrap-select": "^1.13.16",
         "bootstrap-vue": "^2.15.0",
+        "dayjs": "^1.10.4",
         "es6-promise": "^4.2.8",
         "v-clipboard": "^2.2.3",
-        "vue-dayjs-plugin": "^1.0.0",
         "vue-fragment": "^1.5.1",
         "vue-i18n": "^8.18.2",
         "vue-multiselect": "^2.1.6",
