Fix shibboleth endpoint redirect

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -15,6 +15,7 @@
     RewriteRule ^ %1 [L,R=301]
 
     # Send Requests To Front Controller...
+    RewriteCond %{REQUEST_URI} !\.sso/
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
