Update firewall note and env.example

--- a/.env.example
+++ b/.env.example
@@ -89,3 +89,7 @@ ENABLE_AXE=false
 AUTH_LOG_SUCCESSFUL=false
 AUTH_LOG_FAILED=false
 AUTH_LOG_LDAP_ROLES=false
+
+# Support greenlight urls: room urls, signin, ldap_signin and default_room, see MIGRATE_GREENLIGHT.md for more details
+GREENLIGHT_COMPATIBILITY=false
+GREENLIGHT_PATH=b
