--- a/.env.example
+++ b/.env.example
@@ -93,3 +93,5 @@ AUTH_LOG_LDAP_ROLES=false
 # Support greenlight urls: room urls, signin, ldap_signin and default_room, see MIGRATE_GREENLIGHT.md for more details
 GREENLIGHT_COMPATIBILITY=false
 GREENLIGHT_PATH=b
+
+MIX_FRONTEND_BASE_URL="${APP_URL}"
