Update other laravel files, fix tests

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,13 @@
 .env
 .env.backup
 .phpunit.result.cache
+docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.idea
+/.idea
+/.vscode
 .vagrant
 cghooks.lock
 /public/js
