--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,7 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
+    "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
         "php": "^7.3.0",
@@ -19,7 +16,7 @@
         "goldspecdigital/laravel-eloquent-uuid": "^8.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel-lang/lang": "~6.1",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^8.40",
         "laravel/sanctum": "^2.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
@@ -29,14 +26,14 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
         "brainmaestro/composer-git-hooks": "^2.8",
-        "facade/ignition": "^2.3.6",
+        "facade/ignition": "^2.5",
         "friendsofphp/php-cs-fixer": "2.*",
         "fzaninotto/faker": "^1.9.1",
         "laravel/homestead": "^10.8",
-        "mockery/mockery": "^1.3.1",
+        "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "php-coveralls/php-coveralls": "^2.3.0",
-        "phpunit/phpunit": "^9.0",
+        "phpunit/phpunit": "^9.3.3",
         "squizlabs/php_codesniffer": "3.*",
         "timacdonald/log-fake": "^1.9",
         "ext-simplexml": "*"
