Add parallel tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,14 +91,14 @@ jobs:
         DB_PORT: ${{ job.services.mariadb.ports[3306] }}
         TESTING_BBB: ${{ secrets.TESTING_BBB }}
       run: |
-        vendor/bin/phpunit --coverage-clover=coverage.xml
+        vendor/bin/paratest --coverage-clover=coverage.xml
         bash <(curl -s https://codecov.io/bash)
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       if: matrix.php-versions != '7.3'
       env:
         DB_PORT: ${{ job.services.mariadb.ports[3306] }}
         TESTING_BBB: ${{ secrets.TESTING_BBB }}
-      run: vendor/bin/phpunit
+      run: vendor/bin/paratest
     - name: Upload laravel logs
       uses: actions/upload-artifact@v2
       if: failure()
