Cleanup old/used rooms (#187)
* Implement auto room delete

* Update changelog

* Add backend tests

* Update dependencies, bug in tests

* Improve test

* Update settings layout

* Update .env and changelog

* Add settings to ui, frontend- and backend test

* Disable room auto delete by default

* Fix cs

* Fix broken test

--- a/.env.example
+++ b/.env.example
@@ -107,3 +107,12 @@ STATISTICS_MEETINGS_RETENTION_PERIOD=30
 # Enable attendance logging for meetings and duration in days to keep data
 ATTENDANCE_ENABLED=false
 ATTENDANCE_RETENTION_PERIOD=30
+
+# Enable auto room delete
+ROOM_AUTO_DELETE_ENABLED=false
+# Send email to owner if room was not used within the last x days
+ROOM_AUTO_DELETE_INACTIVE_PERIOD=365
+# Send email to owner if room was never used since x days of the creation
+ROOM_AUTO_DELETE_NEVER_USED_PERIOD=90
+# Days from sending the email to deleting the room
+ROOM_AUTO_DELETE_DEADLINE_PERIOD=14
