--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "test": "cross-env NODE_ENV=test mochapack --webpack-config=node_modules/laravel-mix/setup/webpack.config.js --require tests/Frontend/setup.js \"resources/js/**/*.vue\" \"tests/Frontend/**/*.spec.js\"",
-        "lint": "node_modules/.bin/eslint --ext .js,.vue .",
-        "fix-cs": "node_modules/.bin/eslint --ext .js,.vue . --fix",
+        "lint": "eslint --ext .js,.vue .",
+        "fix-cs": "eslint --ext .js,.vue . --fix",
         "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm run test",
         "ci": "npm run lint && npm run cover"
     },
