Remove homestead, add sail

--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
         "brianium/paratest": "^6.3",
         "spatie/laravel-ignition": "^1.0",
         "friendsofphp/php-cs-fixer": "3.*",
-        "fzaninotto/faker": "^1.9.1",
-        "laravel/homestead": "^v13.2.1",
+        "fakerphp/faker": "^1.9.1",
+        "laravel/sail": "^1.14",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^6.1",
         "php-coveralls/php-coveralls": "^2.3.0",
