Replace mocha with jest, refactor tests

--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,7 @@
                     "@babel/preset-env"
                 ]
             ],
-            "plugins": ["rewire", "istanbul", "@babel/plugin-proposal-class-properties"],
+            "plugins": ["rewire"],
             "retainLines": true
         }
     }
