--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "test": "jest",
         "lint": "eslint --ext .js,.vue .",
         "fix-cs": "eslint --ext .js,.vue . --fix",
-        "cover": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm run test",
+        "cover": "jest --coverage",
         "ci": "npm run lint && npm run cover"
     },
     "devDependencies": {
@@ -22,22 +22,19 @@
         "axe-core": "^4.3.5",
         "axios": "^0.21.2",
         "babel-core": "^7.0.0-bridge.0",
-        "babel-plugin-istanbul": "^6.1.1",
         "babel-plugin-rewire": "^1.2.0",
         "bootstrap": "^4.6.1",
         "browser-sync": "^2.27.7",
         "browser-sync-webpack-plugin": "^2.3.0",
         "canvas": "^2.9.0",
-        "cross-env": "^7.0.3",
         "eslint": "^7.32.0",
         "eslint-config-standard": "^14.1.1",
         "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-mocha": "^7.0.1",
+        "eslint-plugin-jest": "^26.5.3",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.3.1",
         "eslint-plugin-standard": "^4.1.0",
         "eslint-plugin-vue": "^7.0.0",
-        "expect": "^26.6.2",
         "glob": "^7.2.0",
         "jest": "^28.1.2",
         "jest-config": "^28.1.2",
@@ -47,11 +44,8 @@
         "jsdom-global": "^3.0.2",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
-        "mocha": "^9.0.0",
-        "mochapack": "^2.1.4",
         "moxios": "^0.4.0",
         "mutationobserver-shim": "^0.3.7",
-        "nyc": "^15.1.0",
         "popper.js": "^1.12",
         "pre-commit": "^1.1.3",
         "prettier": "^2.5.1",
