--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,13 @@ APP_NAME=PILOS
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+# API Server URL
 APP_URL=http://localhost
+# URL of the frontend, usually the same as APP_URL
 MIX_FRONTEND_BASE_URL="${APP_URL}"
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-SESSION_DOMAIN="${APP_URL}"
-SANCTUM_STATEFUL_DOMAINS="${APP_URL}"
 
 # For production daily recommended
 LOG_CHANNEL=stack
