--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=PILOS
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+# API Server URL
 APP_URL=http://localhost
+# URL of the frontend, usually the same as APP_URL
+MIX_FRONTEND_BASE_URL="${APP_URL}"
 
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+
+# For production daily recommended
 LOG_CHANNEL=stack
 
+# Database config
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -13,16 +21,10 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
+# Email config
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
@@ -32,69 +34,61 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-LDAP_CONNECTION=default
+# LDAP config
+LDAP_ENABLED=false
 LDAP_HOST=127.0.0.1
+# For anonymous bind keep LDAP_USERNAME and LDAP_PASSWORD empty
 LDAP_USERNAME="cn=user,dc=local,dc=om"
 LDAP_PASSWORD="secret"
 LDAP_PORT=389
 LDAP_BASE_DN="dc=local,dc=com"
 LDAP_TIMEOUT=5
-LDAP_SSL=false
+LDAP_SSL=true
 LDAP_TLS=false
-
-SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
-SESSION_DOMAIN=localhost,127.0.0.1
-
-# Don't forget to rebuild frontend on changing this environment variables
-MIX_AVAILABLE_LOCALES=en,de
-MIX_DEFAULT_LOCALE=en
-
+# LDAP logging debugging only
+LDAP_LOGGING=false
+# LDAP role mapping, to disable keep LDAP_ROLE_ATTRIBUTE empty
+# Attribute with the users role, can be a multi value attribute
 LDAP_ROLE_ATTRIBUTE=userclass
-LDAP_ROLE_MAP=admin=admin,user=user
+# Map the attribute to the name of a local role, defined as array, ldap role is key, pilos role is value
+LDAP_ROLE_MAP=A=admin,U=user
 
-BROWSERSYNC_URL=localhost
-MIX_WELCOME_MESSAGE_LIMIT=500
-MIX_ROOM_NAME_LIMIT=50
-
-DEFAULT_LOGO=/images/logo.svg
-DEFAULT_FAVICON=/images/favicon.ico
-DEFAULT_ROOM_LIMIT=-1
-DEFAULT_PAGINATION_PAGE_SIZE=15
-OWN_ROOMS_PAGINATION_PAGE_SIZE=5
-
-PASSWORD_SELF_RESET_ENABLED=false
-PASSWORD_RESET_EXPIRE=60
-PASSWORD_RESET_THROTTLE=60
-NEW_USER_PASSWORD_RESET_EXPIRE=60
-NEW_USER_PASSWORD_RESET_THROTTLE=60
-DEFAULT_TIMEZONE=UTC
-ROOM_TOKEN_EXPIRATION=-1
-
-# Enable axe accessibility check tools, only considered in development
-ENABLE_AXE=false
-
+# Login logging
 AUTH_LOG_SUCCESSFUL=false
 AUTH_LOG_FAILED=false
 AUTH_LOG_LDAP_ROLES=false
 
-# Support greenlight urls: room urls, signin, ldap_signin and default_room, see MIGRATE_GREENLIGHT.md for more details
-GREENLIGHT_COMPATIBILITY=false
-GREENLIGHT_PATH=b
+# Don't forget to rebuild frontend on changing any environment variables starting with MIX_
+# Available languages for the language picker
+MIX_AVAILABLE_LOCALES=en,de
+# Default language
+MIX_DEFAULT_LOCALE=en
+# Maximum length of the room welcome message
+MIX_WELCOME_MESSAGE_LIMIT=500
+# Maximum length of the room name
+MIX_ROOM_NAME_LIMIT=50
+# Default logo of the application
+DEFAULT_LOGO=/images/logo.svg
+# Default favicon of the application
+DEFAULT_FAVICON=/images/favicon.ico
+# Global room limit
+DEFAULT_ROOM_LIMIT=-1
+# Global length of paginated lists
+DEFAULT_PAGINATION_PAGE_SIZE=15
+# Length of the paginated list of the own and shared rooms
+OWN_ROOMS_PAGINATION_PAGE_SIZE=5
+# Allow users to self reset password
+PASSWORD_SELF_RESET_ENABLED=false
+# Link lifetime for password reset email
+PASSWORD_RESET_EXPIRE=60
 
-MIX_FRONTEND_BASE_URL="${APP_URL}"
+PASSWORD_RESET_THROTTLE=60
+NEW_USER_PASSWORD_RESET_EXPIRE=60
+NEW_USER_PASSWORD_RESET_THROTTLE=60
+# Default timezone for new users
+DEFAULT_TIMEZONE=UTC
+# Lifetime in minutes of room tokens, -1 for unlimited
+ROOM_TOKEN_EXPIRATION=-1
 
 # Enable statistical usage data of the servers and duration in days to keep data
 STATISTICS_SERVERS_ENABLED=false
@@ -116,3 +110,14 @@ ROOM_AUTO_DELETE_INACTIVE_PERIOD=365
 ROOM_AUTO_DELETE_NEVER_USED_PERIOD=90
 # Days from sending the email to deleting the room
 ROOM_AUTO_DELETE_DEADLINE_PERIOD=14
+
+# Support greenlight urls: room urls, signin, ldap_signin and default_room, see MIGRATE_GREENLIGHT.md for more details
+GREENLIGHT_COMPATIBILITY=false
+GREENLIGHT_PATH=b
+
+
+# Development
+# Enable axe accessibility check tools
+ENABLE_AXE=false
+# Browsersync url
+BROWSERSYNC_URL=localhost
